# remix-flink-mongo-nginx-template

./: .env  compose.override.yaml  compose.yaml
nginx/: Dockerfile  nginx.conf
rest-api/: .env  Dockerfile  dev.Dockerfile  pyproject.toml
rest-api/server/: app.py
ui/: Dockerfile  components.json  dev.Dockerfile  package-lock.json  package.json
ui/app/: root.tsx  tailwind.css
ui/app/components/: AppBar.tsx
ui/app/components/typography/: Typography2.tsx
ui/app/components/ui/: button.tsx  navigation-menu.tsx
ui/app/routes/: _index.tsx
