[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Noah Sundberg <noahsundberg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.6.1"
Flask = "^3.0.1"
debugpy = "^1.8.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
